@@ -1,6 +1,7 @@
 <group>
   <title>review-team</title>
   <email>review@openbuildservice.org</email>
+  <maintainer userid="king"/>
   <person>
     <person userid="Iggy"/>
     <person userid="king"/>
