@@ -1,10 +1,28 @@
 class GroupController < ApplicationController
 
+  include ValidationHelper
+
   validate_action :groupinfo => { :method => :get, :response => :group }
   validate_action :groupinfo => { :method => :put, :request => :group, :response => :status }
   validate_action :groupinfo => { :method => :delete, :response => :status }
 
-  before_action :require_admin, except: [:index, :show]
+  before_action :require_login, except: [:index, :show]
+  # raise an exception if authorize has not yet been called.
+  after_action :verify_authorized, :except => [:index, :show]
+
+  rescue_from Pundit::NotAuthorizedError do |exception|
+    pundit_action = case exception.query.to_s
+       when "index?" then "list"
+       when "show?" then "view"
+       when "create?" then "create"
+       when "new?" then "create"
+       when "update?" then "update"
+       when "destroy?" then "delete"
+       else exception.query
+    end
+
+    render_error status: 403, errorcode: "No permission to #{pundit_action} group"
+  end
 
   def index
     if params[:login]
@@ -21,6 +39,7 @@ class GroupController < ApplicationController
   # DELETE for removing it
   def delete
     group = Group.find_by_title!(params[:title])
+    authorize group, :destroy?
     group.destroy
     render_ok
   end
@@ -34,8 +53,11 @@ class GroupController < ApplicationController
   def update
     group = Group.find_by_title(params[:title])
     if group.nil?
+      authorize Group, :create?
       group = Group.create(:title => params[:title])
     end
+    authorize group, :update?
+
     group.update_from_xml(Xmlhash.parse(request.raw_post))
     group.save!
 
@@ -45,6 +67,8 @@ class GroupController < ApplicationController
   # POST for editing it, adding or remove users
   def command
     group = Group.find_by_title!(URI.unescape(params[:title]))
+    authorize group, :update?
+
     user = User.find_by_login!(params[:userid]) if params[:userid]
 
     if params[:cmd] == "add_user"
