@@ -34,6 +34,8 @@ Features
  * optional binary package tracking, can be used to track released packages.
    Esp. important for maintained products.
 
+ * Groups can have maintainers now, who can modify the member list
+
  * EXPERIMENTAL: Entire projects can be linked now with frozen source revisions.
 
 Changes on purpose:
